# basis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
anchor/: Anchor.toml  tsconfig.json
anchor/programs/basis_vault/: Cargo.toml
anchor/programs/basis_vault/src/: errors.rs  lib.rs  state.rs
anchor/programs/basis_vault/src/instructions/: deposit.rs  initialize.rs  mod.rs  pause.rs  set_keeper.rs  update_nav.rs  withdraw.rs
anchor/tests/: basis_vault.ts
keeper/: package.json  tsconfig.json
keeper/src/: config.ts  index.ts
scripts/: deploy.sh  logger-bootstrap.ts
shared/: package.json  tsconfig.json
shared/src/: constants.ts  formulas.ts  index.ts  types.ts
web/: .env.local.example  .npmrc  next.config.js  package.json  tailwind.config.ts  tsconfig.json
web/app/: dashboard-stats.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx
web/components/: AppShell.tsx  AssetIcon.tsx  AssetPicker.tsx  BasisToaster.tsx  BrandMark.tsx  ChartFrame.tsx  ChartLegend.tsx  CooldownRing.tsx  DepositCard.tsx  EmptyState.tsx  FundingChart.tsx  FundingRateTable.tsx  FundingSection.tsx  Header.tsx  KeeperOfflineBanner.tsx  NavChart.tsx  PositionList.tsx  PositionToastWatcher.tsx  ReplayScrubber.tsx  SegmentedControl.tsx  SettlementCard.tsx  Sparkline.tsx  SpreadChart.tsx  StatCard.tsx  StatusPill.tsx  ToastIcons.tsx  TradeHistory.tsx  VenueBadge.tsx  VenueLogo.tsx  WalletButton.tsx  WithdrawCard.tsx
web/hooks/: useAnimatedNumber.ts  useLiveDots.ts  (+1 more)
(+49 files in other folders)
