[package]
name = "basis_vault"
version = "0.1.0"
description = "Basis funding rate arbitrage vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "basis_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token"] }
